[tool.poetry]
name = "stanford-cs-261-credit-networks-with-fees"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[[tool.poetry.source]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com"
secondary = true


[tool.poetry.dependencies]
python = "3.8"
matplotlib = "3.5.2"
networkx = "2.8.4"
numpy = "1.21.5"
pandas = "1.4.4"
scikit-learn = "1.0.2"
seaborn = "0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
